Iniciada a estrutura com Gradle

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,windows,macos,gradle,intellij,visualstudiocode,linux
+
+# Ignore Gradle build output directory
+build
